--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ui-view></ui-view>
 </div>
 
-<script src="/src/scripts/main.js"></script>
+<script src="asserts/scripts/lib.min.js"></script>
+<script src="asserts/scripts/main.min.js"></script>
 </body>
 </html>
