--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <!--<link type="text/css" rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">-->
+    <link type="text/css" rel="stylesheet" href="asserts/styles/main.min.css">
 </head>
 <body>
 <div class="container">
